# breath

./: .gitignore  .gitlab-ci.yml  .gitmodules  How to build and release.md  README.md  home.py  report.xml  setup.cfg  todolist
.gitlab/issue_templates/: Requisito Funcional.md  Requisito Não-Funcional.md  Requisito de usuário.md
src/: breath.db  model.h5
src/breath/: CONTRIBUTORS.md  __main__.py  app.py  data.db  home.py  login.py  menu.py  registrar.py  ui.py
src/breath/api_interface/: queue.py  request.py
src/breath/console_application/: console_application.py
src/breath/service_interface/: service.py
src/breath/session_manager/: service_constructor.py  session_manager.py
src/breath/session_manager/request_manager/: availability_handler.py  execution_handler  execution_handler.py  incoming_handler.py  manager.py  permission_handler.py  request_handler.py  response_handler.py  validation_handler.py
src/breath/user/: db.py  oauth.py  registrar.py
src/breath_main/: __main__.py
src/breath_main/breath_patient_portal/: register_symptoms.py
src/breath_main/console_application/: climate_request.py  console_application.py
src/breath_main/data_requester/: climate_request.py
src/breath_main/session_manager/: service_constructor.py  session_manager.py
src/breath_main/session_manager/request_manager/: availability_handler.py  execution_handler.py  incoming_handler.py  manager.py  permission_handler.py  request_handler.py  (+2 more)
test/: bda_test.py  process_symptoms_test.py  service_creator.py  test_result.md
uis/: home.ui  login.ui  login_ui.py
