[metadata]
name = breath
version = 0.0.1
author = TODO
author_email = TODO
description = TODO
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/EltonCN/breath-brazilian-research-of-atmosphere-towards-health
project_urls =
    Bug Tracker = https://gitlab.com/EltonCN/breath-brazilian-research-of-atmosphere-towards-health/issues
    Documentation = TODO
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence

license_files = TODO
license = TODO
[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy

[options.packages.find]
where = src